# esp32-bme280

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  reference  sdkconfig
components/bme280/: BME280.cpp  BME280.h
components/cpp_utils/tests/: task_i2c_scanner.cpp  test_rest.cpp
components/cpp_utils/tests/BLETests/: SampleClient.cpp
main/: MeasureTask.cpp  MeasureTask.h  main.cpp
